hphp/test/zend7/Zend/tests/this_in_extract.php.expectf

Fatal error: %s
Stack trace:
#0 %sthis_in_extract.php(3): extract(Array)
#1 %sthis_in_extract.php(6): foo()
#2 {main}
  thrown in %sthis_in_extract.php on line 3